[gd_scene load_steps=8 format=3 uid="uid://dnrotuaj6yba"]

[ext_resource type="Script" path="res://main.gd" id="1_3jncq"]
[ext_resource type="PackedScene" uid="uid://dmfs5udv7n3su" path="res://enemy.tscn" id="2_dkw5v"]
[ext_resource type="Script" path="res://Spawner.gd" id="4_jm5md"]

[sub_resource type="NavigationMesh" id="NavigationMesh_h8hxj"]
vertices = PackedVector3Array(-11, -0.098362, -1, -10, -0.098362, -1.25, -2.75, -0.098362, -8, -2.75, -0.098362, -9.5, -12.5, -0.098362, -24, -24, -0.098362, -18, -24, -0.098362, -11.75, -12.5, -0.098362, -24, -24, -0.098362, -24, -24, -0.098362, -18, -24, -0.098362, 0.5, -12.25, -0.098362, 0.5, -11, -0.098362, -1, -24, -0.098362, -5.75, -2, -0.098362, -10.25, -0.5, -0.098362, -10.25, -0.75, -0.098362, -24, -24, -0.098362, -11.75, -24, -0.098362, -5.75, -11, -0.098362, -1, -2.75, -0.098362, -9.5, -0.75, -0.098362, -24, -12.5, -0.098362, -24, -2.75, -0.098362, -9.5, -2, -0.098362, -10.25, -0.75, -0.098362, -24, 2.5, -0.098362, -10.5, 2.5, -0.098362, -24, -0.75, -0.098362, -24, -0.5, -0.098362, -10.25, 24, -0.098362, -16.5, 24, -0.098362, -24, 13.25, -0.098362, -24, 2.5, -0.098362, -24, 2.5, -0.098362, -10.5, 3.5, -0.098362, -9.75, 13.25, -0.098362, -24, 13.25, -0.098362, -24, 3.5, -0.098362, -9.75, 3.5, -0.098362, -8.75, 24, -0.098362, -8.75, 24, -0.098362, -16.5, -9, -0.098362, -0.5, -6.25, -0.098362, 4, -5.5, -0.098362, 4.5, -2, -0.098362, -7, -2.75, -0.098362, -8, -10, -0.098362, -1.25, -9, -0.098362, -0.5, -2, -0.098362, -7, 3.5, -0.098362, -8, 2.5, -0.098362, -7, -5.5, -0.098362, 5.5, 24, -0.098362, 5.5, 24, -0.098362, -1.75, 24, -0.098362, -8.75, 3.5, -0.098362, -8.75, 3.5, -0.098362, -8, 24, -0.098362, -1.75, -2, -0.098362, -7, -5.5, -0.098362, 4.5, -5.5, -0.098362, 5.5, 2.5, -0.098362, -7, -24, -0.098362, 12.25, -24, -0.098362, 24, -15.75, -0.098362, 24, -9, -0.098362, 5.75, -12.25, -0.098362, 0.5, -24, -0.098362, 0.5, -9, -0.098362, 5.75, -24, -0.098362, 0.5, -24, -0.098362, 12.25, -15.75, -0.098362, 24, -7.25, -0.098362, 24, -7.25, -0.098362, 7, 16, -0.098362, 24, 24, -0.098362, 24, 24, -0.098362, 14.75, 8.25, -0.098362, 24, 16, -0.098362, 24, 24, -0.098362, 14.75, -5.5, -0.098362, 5.5, -7.25, -0.098362, 7, -7.25, -0.098362, 24, 0.5, -0.098362, 24, -5.5, -0.098362, 5.5, 0.5, -0.098362, 24, 8.25, -0.098362, 24, 24, -0.098362, 14.75, 24, -0.098362, 5.5)
polygons = [PackedInt32Array(1, 0, 2), PackedInt32Array(2, 0, 3), PackedInt32Array(6, 5, 4), PackedInt32Array(9, 8, 7), PackedInt32Array(11, 10, 12), PackedInt32Array(12, 10, 13), PackedInt32Array(16, 15, 14), PackedInt32Array(18, 17, 19), PackedInt32Array(19, 17, 20), PackedInt32Array(20, 17, 22), PackedInt32Array(20, 22, 21), PackedInt32Array(25, 24, 23), PackedInt32Array(26, 29, 27), PackedInt32Array(27, 29, 28), PackedInt32Array(32, 31, 30), PackedInt32Array(34, 33, 35), PackedInt32Array(35, 33, 36), PackedInt32Array(38, 37, 39), PackedInt32Array(39, 37, 41), PackedInt32Array(39, 41, 40), PackedInt32Array(43, 42, 44), PackedInt32Array(44, 42, 45), PackedInt32Array(49, 48, 46), PackedInt32Array(46, 48, 47), PackedInt32Array(51, 50, 52), PackedInt32Array(52, 50, 54), PackedInt32Array(52, 54, 53), PackedInt32Array(56, 55, 57), PackedInt32Array(57, 55, 58), PackedInt32Array(60, 59, 61), PackedInt32Array(61, 59, 62), PackedInt32Array(65, 64, 63), PackedInt32Array(66, 68, 67), PackedInt32Array(69, 74, 70), PackedInt32Array(70, 74, 71), PackedInt32Array(71, 74, 72), PackedInt32Array(72, 74, 73), PackedInt32Array(77, 76, 75), PackedInt32Array(80, 79, 78), PackedInt32Array(82, 81, 83), PackedInt32Array(83, 81, 84), PackedInt32Array(86, 85, 87), PackedInt32Array(87, 85, 88), PackedInt32Array(88, 85, 89)]
agent_radius = 1.0

[sub_resource type="BoxShape3D" id="BoxShape3D_jomft"]
size = Vector3(50, 1, 50)

[sub_resource type="BoxMesh" id="BoxMesh_wrls5"]
size = Vector3(50, 1, 50)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_544fh"]
albedo_color = Color(0.886275, 0.654902, 0.25098, 1)

[node name="Main" type="Node3D"]
script = ExtResource("1_3jncq")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 27.9985, 0)
shadow_enabled = true

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.287076, 0.957908, 0, -0.957908, 0.287076, 0, 14.1479, 9.58816)
fov = 100.0

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="."]
navigation_mesh = SubResource("NavigationMesh_h8hxj")

[node name="Ground" type="StaticBody3D" parent="NavigationRegion3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="NavigationRegion3D/Ground"]
shape = SubResource("BoxShape3D_jomft")

[node name="MeshInstance3D" type="MeshInstance3D" parent="NavigationRegion3D/Ground"]
mesh = SubResource("BoxMesh_wrls5")

[node name="CSGBox3D" type="CSGBox3D" parent="NavigationRegion3D"]
transform = Transform3D(-3.61751, 0, 0.856019, 0, 3.15353, 0, -5.24075, 0, -0.590881, -8.824, 1.49962, 2.886)
use_collision = true
collision_mask = 0
size = Vector3(1, 0.893183, 1)
material = SubResource("StandardMaterial3D_544fh")

[node name="CSGBox3D2" type="CSGBox3D" parent="NavigationRegion3D"]
transform = Transform3D(-12.1583, 0, -0.0182114, 0, 1.24815, 0, 0.207129, 0, -1.069, 0.343, 0.5, -8.738)
use_collision = true
collision_mask = 0
material = SubResource("StandardMaterial3D_544fh")

[node name="Spawner" type="Node3D" parent="."]
script = ExtResource("4_jm5md")

[node name="Timer" type="Timer" parent="Spawner"]

[node name="UI" type="CanvasLayer" parent="."]

[node name="MainMenu" type="PanelContainer" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -329.0
offset_top = -162.0
offset_right = 328.0
offset_bottom = 162.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="UI/MainMenu"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MainMenu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="TitleLabel" type="Label" parent="UI/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Main Menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="UI/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="NameEdit" type="LineEdit" parent="UI/MainMenu/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
size_flags_stretch_ratio = 10.0
placeholder_text = "Player name"
alignment = 1
max_length = 20

[node name="ColorRect" type="ColorRect" parent="UI/MainMenu/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 10.0
color = Color(0, 0.568627, 0.572549, 1)

[node name="HSeparator" type="HSeparator" parent="UI/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HostButton" type="Button" parent="UI/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Host"

[node name="AddressEdit" type="LineEdit" parent="UI/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Address to join"
alignment = 1

[node name="JoinButton" type="Button" parent="UI/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Join"

[node name="PlayersSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://player.tscn")
spawn_path = NodePath("../Players")

[node name="EnemiesSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://enemy.tscn")
spawn_path = NodePath("../Enemies")

[node name="Enemies" type="Node" parent="."]

[node name="Enemy" parent="Enemies" instance=ExtResource("2_dkw5v")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10.945, 0, 4.503)

[node name="Enemy2" parent="Enemies" instance=ExtResource("2_dkw5v")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10.297, 0, -3.595)

[node name="Enemy3" parent="Enemies" instance=ExtResource("2_dkw5v")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -13.973, 0, -9.378)

[node name="Players" type="Node" parent="."]

[connection signal="timeout" from="Spawner/Timer" to="Spawner" method="_on_timer_timeout"]
[connection signal="gui_input" from="UI/MainMenu/MarginContainer/VBoxContainer/HBoxContainer/ColorRect" to="." method="_on_color_rect_gui_input"]
[connection signal="pressed" from="UI/MainMenu/MarginContainer/VBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="UI/MainMenu/MarginContainer/VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="spawned" from="PlayersSpawner" to="." method="_on_players_spawner_spawned"]
